<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taxi (john Goodwin)</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="application_name">com.orm.SugarApp</string><!-- Sugar ORM -->
    <string name="hello_world">Hello world!</string>
    <string name="google_maps_api_key">AIzaSyBMBakhenvt6RmtWnAqsewSWlZYHi6eGbM</string>

     <!-- menu.xml -->
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Json</string>
    <string name="action_settings2">Calendar</string>
    <string name="action_settings3">Provider</string>
    <string name="action_settings4">Xml</string>
    <string name="action_settings5">About</string>

    <!-- MainActivity.java -->
    <string name="PROVIDER_NAME_CONTENT">sitepoint.contentdemo.images</string>
    <string name="IMAGETITLE">IMAGETITLE</string>	<!-- Column -->
    <string name="IMAGEURL">IMAGEURL</string>		<!-- Column -->
    <string name="IMAGEDESC">IMAGEDESC</string>		<!-- Column -->

    <!-- ImagesProvider.java -->
    <string name="PROVIDER_NAME">androidcontentproviderdemo.androidcontentprovider.images</string>

    <!-- ImageDataBase.java -->
    <string name="DATABASE_NAME">ImagesDatabase.db</string>;
    <string name="TABLE_NAME">imagestore</string>;

    <!-- activity_main.xml -->
    <string name="image_title">Image Title</string>;
    <string name="image_url">Image URL</string>;
    <string name="image_description">Image description</string>;
    <string name="add_image">Add Image</string>;
    <string name="delete_image">Delete Image</string>;
    <string name="update_image">Update Image</string>;

</resources>
